Update nav height on mobile to fixed height.

--- a/public/static/css/custom.css
+++ b/public/static/css/custom.css
@@ -46,13 +46,13 @@
   }
 }
 
-.point-banner {
+/* .point-banner {
     background: url(/static/images/img_point2.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-}
+} */
 
 .video-padding {
   padding-top: 8rem;
