--- a/resources/frontend/sass/themes/_layout.scss
+++ b/resources/frontend/sass/themes/_layout.scss
@@ -11,7 +11,7 @@
   }
 
   &.fit-padding {
-    padding-top: 102px !important;
+    padding-top: 110px !important;
 
     @include media-over(md) {
       padding-top: 6rem !important;
